# a2a-pydantic-ai

./: README.md  pyproject.toml
src/a2a_pydantic_ai/a2a_server/: helpdesk_agent.py  restaurant_agent.py
src/a2a_pydantic_ai/mcp/: helpdesk_tools.py  restaurant_tools.py
